# nba_scraper

./: AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  get_api_calls.py  pyproject.toml  requirements.txt  setup.py  test_integration.py
.github/workflows/: ci.yml
nba_parser/: __init__.py  pbp.py  playertotals.py  teamtotals.py
nba_scraper/: __init__.py  boxscore_validation.py  cdn_client.py  cdn_parser.py  coords_backfill.py  helper_functions.py  io_sources.py  lineup_builder.py  nba_scraper.py  parser_utils.py  schema.py  scrape_functions.py  stat_calc_functions.py  v2_parser.py  wnba_scrape_functions.py
nba_scraper/mapping/: __init__.py  descriptor_norm.py  event_codebook.py  loader.py  mapping_template.yml
scripts/: cataloguer.py
tests/: test_boxscore_validation.py  test_functional.py  test_integration.py  test_mapping_overrides.py  test_teamtotals_ft_metrics.py  test_unit.py  test_with_parser.py
tests/test_files/: cdn_boxscore_0022400001.json  cdn_playbyplay_0022400001.json  cdn_shotchart_0022400001.json  mapping_min.yml  v2_pbp_0021700001.json
